[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/black.png" type="Texture" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=3]
[ext_resource path="res://undertale_battle_font.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.54902 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 334.0
margin_top = 166.0
margin_right = 689.0
margin_bottom = 433.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 355.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Пауза"
align = 1

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 355.0
margin_bottom = 137.0
theme = ExtResource( 2 )
text = "Продолжить"

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 355.0
margin_bottom = 202.0
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Начать Заново"

[node name="ExitToTheMenu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 206.0
margin_right = 355.0
margin_bottom = 267.0
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Выйти в Меню"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitToTheMenu" to="." method="_on_ExitToTheMenu_pressed"]
